refactor: Update DuckLake connection logging and simplify database queries in ducklake.yaml

--- a/core/dbio/templates/ducklake.yaml
+++ b/core/dbio/templates/ducklake.yaml
@@ -72,13 +72,9 @@ metadata:
     SELECT snapshot_id FROM __ducklake_metadata_ducklake.ducklake_snapshot
     WHERE snapshot_id = (SELECT max(snapshot_id) FROM __ducklake_metadata_ducklake.ducklake_snapshot)
 
-  databases: |
-    SELECT database_name 
-    FROM duckdb_databases() 
-    WHERE database_name != 'system' 
-    ORDER BY database_name
+  databases: PRAGMA database_list
   
-  current_database: SELECT current_database()
+  current_database: PRAGMA database_list
 
   schemas: |
     WITH current_snap AS (
