feat: Enhance DuckDB connection handling with support for Iceberg catalog types and improve secret management

--- a/cmd/sling/tests/replications/r.23.yaml
+++ b/cmd/sling/tests/replications/r.23.yaml
@@ -1,16 +1,27 @@
 source: postgres
 target: iceberg
 
+hooks:
+  end:
+    # verify that we can query with custom SQL via duckDB
+    - type: query
+      connection: iceberg
+      query: select count(*) from iceberg_catalog.public.test1k_mariadb_pg
+      into: count_result
+    
+    - type: log
+      message: 'count_result => { store.count_result[0] }'
+
 streams:
   test1k_mariadb_pg_full:
     mode: full-refresh
-    sql: select * from public.test1k_mariadb_pg where update_dt < '2018-12-01'
+    sql: select * from public.test1k_mariadb_pg where create_dt < '2018-12-01'
     object: public.test1k_mariadb_pg
 
   test1k_mariadb_pg_incremental:
     mode: incremental
     sql: select * from public.test1k_mariadb_pg where {incremental_where_cond}
     object: public.test1k_mariadb_pg
-    update_key: update_dt
+    update_key: create_dt
   
   
