--- a/cmd/sling/tests/replications/r.23.yaml
+++ b/cmd/sling/tests/replications/r.23.yaml
@@ -3,6 +3,13 @@ target: '{target}'
 
 hooks:
   end:
+    # does not work for gcp or sql
+    - type: check
+      id: target_check
+      check: lower(target.name) != "iceberg_gcp" && lower(target.name) != "iceberg_sql"  
+      failure_message: skipping target {target.name}
+      on_failure: break
+      
     # verify that we can query with custom SQL via duckDB
     - type: query
       connection: '{target}'
